--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "components": "^0.1.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
-    "styled": "^1.0.0"
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
+    "react-navigation": "^4.4.4",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
