--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-svg": "^13.13.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-navigation": "^4.4.4",
     "styled-components": "^6.0.7"
   },
