--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.3",
+    "@react-native-community/datetimepicker": "^7.5.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "components": "^0.1.0",
+    "graphql": "^16.8.0",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
