--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
+    "react-native-image-picker": "^7.0.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.13.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-navigation": "^4.4.4",
